@@ -1,3 +1,10 @@
+TAG: qcreports_db-4-4-0-5
+DATE: 09/16/2010
+STAFF: lec
+CHANGES:
+1) TR10356/MGI_ObsoleteGeneModel.sql
+2) qcr.html;added gorefgenload
+
 TAG: qcreports_db-4-4-0-4
 TAG: qcreports_db-4-4-0-3
 DATE: 09/08/2010
